# bunzo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  fibonacci.c  hello.c  installer.iss  loops.c  recursion.c
benchmarks/: json.bz  (+7 more)
compiler/: Cargo.toml  build.rs  test_arith.c  test_cond.c  test_func.c  test_loops.c  test_string.c
compiler/src/: lib.rs  main.rs  repl.rs
compiler/src/ast/: mod.rs  node.rs
compiler/src/benchmark/: mod.rs
compiler/src/cli/: handler.rs  mod.rs
compiler/src/codegen/: mod.rs
compiler/src/diagnostics/: error.rs  mod.rs
compiler/src/formatter/: mod.rs  style.rs  tests.rs  writer.rs
compiler/src/ir/: builder.rs  function.rs  instructions.rs  lowering.rs  mod.rs  module.rs  optimize.rs  pretty_print.rs  types.rs
compiler/src/lexer/: mod.rs  tests.rs  token.rs
compiler/src/linter/: mod.rs  rules.rs  tests.rs
compiler/src/lsp/: handlers.rs  mod.rs  protocol.rs  tests.rs
compiler/src/packagemanager/: manifest.rs  mod.rs  tests.rs
compiler/src/parser/: mod.rs  parser.rs  tests.rs
compiler/src/runtime/: db_state.rs  environment.rs  eval.rs  mod.rs  tests.rs  value.rs
compiler/src/semantic/: analyzer.rs  mod.rs  tests.rs
compiler/src/source/: mod.rs  reader.rs
compiler/tests/: benchmark_test.rs  class_test.rs  cli_test.rs  codegen_test.rs  control_flow_test.rs  diagnostics_test.rs  formatter_test.rs  if_test.rs  ir_test.rs  lexer_test.rs  loop_test.rs  optimizer_test.rs  parser_test.rs  runtime_test.rs  semantic_test.rs  source_test.rs  stdlib_test.rs  struct_test.rs  type_checker_test.rs
(+106 files in other folders)
