[package]
name = "bzc"
version = "0.8.0-alpha"
edition = "2024"
authors = ["Ugesh Praavin D"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ugesh-Praavin/bunzo"
homepage = "https://bunzo.dev"

[lints]
workspace = true

[[bin]]
name = "bzc"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"